# voyant-ros

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  package.xml
.github/workflows/: docker-build.yml  docker-image.yml
config/: build_foxglove_config.py  mcap_to_bin_params.yaml  sensor_params.yaml  viz.rviz  voyant_foxglove_cfg.json  voyant_foxglove_cfg.template.json  voyant_foxglove_config.json  voyant_ros_foxglove_cfg.json
config/foxglove_user_scripts/: add_new_fields.ts  dop_color_add_fields.ts  ref_color_add_fields.ts  rng_color_add_fields.ts  snr_color_add_fields.ts
docs/: debian.md
include/voyant-ros/: bin_to_mcap.hpp  sensor_driver.hpp
include/voyant_ros/: bin_to_mcap.hpp  conversion_utils.hpp  mcap_to_bin.hpp  point_types.hpp  sensor_driver.hpp  sensor_params.hpp
launch/: foxglove_viz_launch.py  sensor_driver_minimal_launch.py  sensor_launch.py
msg/: VoyantDeviceMetadata.msg
src/: bin_to_mcap.cpp  main.cpp  mcap_to_bin.cpp  sensor_driver.cpp  voyant_bin_to_mcap.cpp  voyant_mcap_to_bin.cpp  voyant_rosbag2_converter.cpp
